// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for algebraCAS 1`] = `
{
  "buttons": 14,
  "circles": 0,
  "inputs": 1,
  "lengthBucket": 34,
  "paths": 0,
  "sha": "fbc5c321bbf37d0d",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for calculus 1`] = `
{
  "buttons": 29,
  "circles": 1,
  "inputs": 9,
  "lengthBucket": 103,
  "paths": 0,
  "sha": "0fdc58c7d22db737",
  "svgs": 2,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for dataPlot 1`] = `
{
  "buttons": 31,
  "circles": 0,
  "inputs": 9,
  "lengthBucket": 58,
  "paths": 0,
  "sha": "2f1a17e63b06283e",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for dataStudio 1`] = `
{
  "buttons": 24,
  "circles": 0,
  "inputs": 5,
  "lengthBucket": 55,
  "paths": 0,
  "sha": "833e1c2ac6cacb67",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for funcGrapher 1`] = `
{
  "buttons": 0,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 0,
  "paths": 0,
  "sha": "755113491ce3b672",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for geoQuiz 1`] = `
{
  "buttons": 12,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 34,
  "paths": 0,
  "sha": "94f12affa8c3ee81",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for geometryProver 1`] = `
{
  "buttons": 17,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 39,
  "paths": 0,
  "sha": "2dbea9268fba8d6a",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for graphCalc 1`] = `
{
  "buttons": 26,
  "circles": 0,
  "inputs": 6,
  "lengthBucket": 68,
  "paths": 0,
  "sha": "4363d03513e5aaf6",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for inequality 1`] = `
{
  "buttons": 30,
  "circles": 0,
  "inputs": 7,
  "lengthBucket": 76,
  "paths": 0,
  "sha": "278ac355362a2056",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for logicLab 1`] = `
{
  "buttons": 41,
  "circles": 3,
  "inputs": 1,
  "lengthBucket": 124,
  "paths": 1,
  "sha": "09efa68587a1bd5b",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for probability 1`] = `
{
  "buttons": 37,
  "circles": 6,
  "inputs": 4,
  "lengthBucket": 100,
  "paths": 1,
  "sha": "136c88a7d97a1187",
  "svgs": 2,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for unitConvert 1`] = `
{
  "buttons": 21,
  "circles": 0,
  "inputs": 1,
  "lengthBucket": 44,
  "paths": 0,
  "sha": "20eae0de103717ce",
  "svgs": 0,
}
`;
